--- a/UiForm/main_window.ui
+++ b/UiForm/main_window.ui
@@ -6,65 +6,128 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>891</width>
-    <height>628</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
+  <property name="mouseTracking">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
-   <string>Borde Imagenes</string>
+   <string>MainWindow</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../demo.ico</normaloff>../demo.ico</iconset>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="mouseTracking">
+    <bool>true</bool>
+   </property>
    <widget class="QTreeWidget" name="treeWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>241</width>
-      <height>581</height>
+      <width>200</width>
+      <height>556</height>
      </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
     </property>
     <property name="headerHidden">
      <bool>true</bool>
     </property>
     <column>
      <property name="text">
-      <string>1</string>
+      <string notr="true">1</string>
      </property>
     </column>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>256</x>
-      <y>10</y>
-      <width>621</width>
-      <height>561</height>
+      <x>200</x>
+      <y>0</y>
+      <width>600</width>
+      <height>556</height>
      </rect>
     </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Sunken</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
     </property>
     <property name="text">
      <string/>
     </property>
-    <property name="scaledContents">
-     <bool>false</bool>
-    </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
-    <property name="wordWrap">
-     <bool>false</bool>
+   </widget>
+   <widget class="QScrollArea" name="scrollArea">
+    <property name="enabled">
+     <bool>true</bool>
     </property>
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>0</y>
+      <width>600</width>
+      <height>556</height>
+     </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
+    </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>588</width>
+       <height>544</height>
+      </rect>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="pushButton_Plus">
     <property name="geometry">
      <rect>
-      <x>848</x>
-      <y>540</y>
-      <width>31</width>
+      <x>215</x>
+      <y>15</y>
+      <width>25</width>
       <height>25</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string>+</string>
@@ -73,11 +136,14 @@
    <widget class="QPushButton" name="pushButton_Minus">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>540</y>
-      <width>31</width>
+      <x>245</x>
+      <y>15</y>
+      <width>25</width>
       <height>25</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string>-</string>
@@ -89,7 +155,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>891</width>
+     <width>800</width>
      <height>22</height>
     </rect>
    </property>
@@ -105,50 +171,77 @@
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuFilter">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="title">
+     <string>Filter</string>
+    </property>
+    <addaction name="actionEdges"/>
+    <addaction name="actionGaussian"/>
+    <addaction name="actionThreshold"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuFilter"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionLoad_Image">
    <property name="text">
-    <string>Load Image</string>
+    <string>Load</string>
    </property>
-   <property name="statusTip">
-    <string/>
+  </action>
+  <action name="actionRemove_Image">
+   <property name="enabled">
+    <bool>false</bool>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
-   </property>
-   <property name="shortcutContext">
-    <enum>Qt::WindowShortcut</enum>
+   <property name="text">
+    <string>Remove</string>
    </property>
   </action>
   <action name="actionSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
   </action>
   <action name="actionSave_Group">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save Group</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+Q</string>
+  </action>
+  <action name="actionEdges">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Edges</string>
    </property>
   </action>
-  <action name="actionRemove_Image">
-   <property name="text">
-    <string>Remove Image</string>
+  <action name="actionGaussian">
+   <property name="enabled">
+    <bool>false</bool>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+R</string>
+   <property name="text">
+    <string>Gaussian</string>
+   </property>
+  </action>
+  <action name="actionThreshold">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Threshold</string>
    </property>
   </action>
  </widget>
