--- a/UiForm/main_window.ui
+++ b/UiForm/main_window.ui
@@ -36,6 +36,9 @@
       <height>556</height>
      </rect>
     </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
     </property>
@@ -127,6 +130,9 @@
      </rect>
     </property>
     <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="tabletTracking">
      <bool>false</bool>
     </property>
     <property name="text">
@@ -143,7 +149,7 @@
      </rect>
     </property>
     <property name="mouseTracking">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="text">
      <string>-</string>
@@ -185,7 +191,11 @@
    <addaction name="menuFile"/>
    <addaction name="menuFilter"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="mouseTracking">
+    <bool>true</bool>
+   </property>
+  </widget>
   <action name="actionLoad_Image">
    <property name="text">
     <string>Load</string>
