add shortcut and others details of visual

--- a/src/UiForm/main_window.ui
+++ b/src/UiForm/main_window.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../demo.ico</normaloff>../demo.ico</iconset>
+    <normaloff>../../icons/python.ico</normaloff>../../icons/python.ico</iconset>
   </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonIconOnly</enum>
@@ -167,7 +167,7 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>Fi&amp;le</string>
     </property>
     <addaction name="actionLoad_Image"/>
     <addaction name="actionRemove_Image"/>
@@ -182,14 +182,27 @@
      <bool>true</bool>
     </property>
     <property name="title">
-     <string>Filter</string>
+     <string>Fil&amp;ters</string>
     </property>
     <addaction name="actionEdges"/>
     <addaction name="actionGaussian"/>
     <addaction name="actionThreshold"/>
    </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>O&amp;ptions</string>
+    </property>
+    <addaction name="actionHelp"/>
+    <addaction name="separator"/>
+    <addaction name="actionOrientation"/>
+    <addaction name="actionReport"/>
+    <addaction name="separator"/>
+    <addaction name="actionAbout_the_Authors"/>
+    <addaction name="actionAbout_the_App"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuFilter"/>
+   <addaction name="menuOptions"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="mouseTracking">
@@ -197,61 +210,194 @@
    </property>
   </widget>
   <action name="actionLoad_Image">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/blue-folder-horizontal-open.png</normaloff>../../icons/blue-folder-horizontal-open.png</iconset>
+   </property>
    <property name="text">
-    <string>Load</string>
+    <string>Load Image</string>
+   </property>
+   <property name="iconText">
+    <string>Load Image</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
    </property>
   </action>
   <action name="actionRemove_Image">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/cross-circle.png</normaloff>../../icons/cross-circle.png</iconset>
+   </property>
    <property name="text">
-    <string>Remove</string>
+    <string>Remove Image</string>
+   </property>
+   <property name="iconText">
+    <string>Remove Image</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
   <action name="actionSave">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/disk.png</normaloff>../../icons/disk.png</iconset>
+   </property>
    <property name="text">
-    <string>Save</string>
+    <string>Save Image</string>
+   </property>
+   <property name="iconText">
+    <string>Save Image</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionSave_Group">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/disk--pencil.png</normaloff>../../icons/disk--pencil.png</iconset>
+   </property>
    <property name="text">
-    <string>Save Group</string>
+    <string>Save Images in Group</string>
+   </property>
+   <property name="iconText">
+    <string>Save Images in Group</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+G</string>
    </property>
   </action>
   <action name="actionExit">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/if_logout_48698.png</normaloff>../../icons/if_logout_48698.png</iconset>
+   </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+F4</string>
    </property>
   </action>
   <action name="actionEdges">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/application-image.png</normaloff>../../icons/application-image.png</iconset>
+   </property>
    <property name="text">
     <string>Edges</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
    </property>
   </action>
   <action name="actionGaussian">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/icon-diagram.png</normaloff>../../icons/icon-diagram.png</iconset>
+   </property>
    <property name="text">
     <string>Gaussian</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+G</string>
    </property>
   </action>
   <action name="actionThreshold">
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/scissors.png</normaloff>../../icons/scissors.png</iconset>
+   </property>
    <property name="text">
     <string>Threshold</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
+  </action>
+  <action name="actionHelp">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/question.png</normaloff>../../icons/question.png</iconset>
+   </property>
+   <property name="text">
+    <string>Help</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
+   </property>
+  </action>
+  <action name="actionAbout_the_Authors">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/if_hire-me_48687.png</normaloff>../../icons/if_hire-me_48687.png</iconset>
+   </property>
+   <property name="text">
+    <string>About the Authors</string>
+   </property>
+   <property name="shortcut">
+    <string>F10</string>
+   </property>
+  </action>
+  <action name="actionAbout_the_App">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/if_special-offer_48729.png</normaloff>../../icons/if_special-offer_48729.png</iconset>
+   </property>
+   <property name="text">
+    <string>About the App</string>
+   </property>
+   <property name="shortcut">
+    <string>F11</string>
+   </property>
+  </action>
+  <action name="actionOrientation">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/clipboard-paste-document-text.png</normaloff>../../icons/clipboard-paste-document-text.png</iconset>
+   </property>
+   <property name="text">
+    <string>Orientation</string>
+   </property>
+   <property name="shortcut">
+    <string>F6</string>
+   </property>
+  </action>
+  <action name="actionReport">
+   <property name="icon">
+    <iconset>
+     <normaloff>../../icons/printer.png</normaloff>../../icons/printer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Report</string>
+   </property>
+   <property name="shortcut">
+    <string>F7</string>
+   </property>
+  </action>
+  <action name="actionasdasd">
+   <property name="text">
+    <string>asdasd</string>
    </property>
   </action>
  </widget>
