--- a/src/UiForm/edge_param.ui
+++ b/src/UiForm/edge_param.ui
@@ -7,17 +7,21 @@
     <x>0</x>
     <y>0</y>
     <width>412</width>
-    <height>194</height>
+    <height>199</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Edges Type</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../icons/python.ico</normaloff>../../icons/python.ico</iconset>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>150</y>
+     <y>160</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -34,7 +38,7 @@
     <rect>
      <x>140</x>
      <y>20</y>
-     <width>261</width>
+     <width>251</width>
      <height>25</height>
     </rect>
    </property>
@@ -72,7 +76,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>20</y>
      <width>101</width>
      <height>21</height>
@@ -111,14 +115,14 @@
   <widget class="QRadioButton" name="radioButton_1">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>70</y>
-     <width>112</width>
+     <width>81</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Simple</string>
+    <string>&amp;Simple</string>
    </property>
    <property name="checkable">
     <bool>true</bool>
@@ -137,20 +141,20 @@
     </rect>
    </property>
    <property name="text">
-    <string>Horizontal</string>
+    <string>&amp;Horizontal</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="radioButton_3">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>310</x>
      <y>70</y>
-     <width>112</width>
+     <width>81</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Vertical</string>
+    <string>Ve&amp;rtical</string>
    </property>
   </widget>
  </widget>
