--- a/src/UiForm/gauss_param.ui
+++ b/src/UiForm/gauss_param.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Gaussian Parameters</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../icons/python.ico</normaloff>../../icons/python.ico</iconset>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
@@ -45,7 +49,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>50</x>
      <y>10</y>
      <width>41</width>
      <height>21</height>
@@ -93,9 +97,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>50</x>
      <y>50</y>
-     <width>67</width>
+     <width>51</width>
      <height>17</height>
     </rect>
    </property>
@@ -119,8 +123,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>100</y>
+     <x>50</x>
+     <y>90</y>
      <width>67</width>
      <height>17</height>
     </rect>
