--- a/src/UiForm/threshold_param.ui
+++ b/src/UiForm/threshold_param.ui
@@ -6,18 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>354</width>
-    <height>324</height>
+    <width>346</width>
+    <height>317</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Threshold Param</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../icons/python.ico</normaloff>../../icons/python.ico</iconset>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>280</y>
+     <y>270</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -52,7 +56,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>40</x>
      <y>10</y>
      <width>111</width>
      <height>31</height>
@@ -65,9 +69,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>50</y>
-     <width>101</width>
+     <x>80</x>
+     <y>60</y>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
@@ -79,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>90</y>
+     <y>100</y>
      <width>161</width>
      <height>25</height>
     </rect>
@@ -108,8 +112,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>90</y>
+     <x>90</x>
+     <y>100</y>
      <width>67</width>
      <height>31</height>
     </rect>
@@ -121,9 +125,9 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>140</y>
-     <width>67</width>
+     <width>51</width>
      <height>21</height>
     </rect>
    </property>
@@ -135,7 +139,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>130</y>
+     <y>140</y>
      <width>69</width>
      <height>26</height>
     </rect>
@@ -144,9 +148,9 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>190</y>
-     <width>67</width>
+     <x>110</x>
+     <y>180</y>
+     <width>41</width>
      <height>17</height>
     </rect>
    </property>
@@ -157,7 +161,7 @@
   <widget class="QComboBox" name="comboBox_3">
    <property name="geometry">
     <rect>
-     <x>175</x>
+     <x>170</x>
      <y>180</y>
      <width>161</width>
      <height>25</height>
@@ -192,9 +196,9 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>240</y>
-     <width>67</width>
+     <x>110</x>
+     <y>220</y>
+     <width>51</width>
      <height>17</height>
     </rect>
    </property>
@@ -206,7 +210,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>230</y>
+     <y>220</y>
      <width>69</width>
      <height>26</height>
     </rect>
@@ -216,7 +220,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>50</y>
+     <y>60</y>
      <width>48</width>
      <height>26</height>
     </rect>
