--- a/src/UiForm/main_window.ui
+++ b/src/UiForm/main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>972</width>
+    <width>968</width>
     <height>672</height>
    </rect>
   </property>
@@ -33,7 +33,7 @@
       <x>0</x>
       <y>0</y>
       <width>200</width>
-      <height>561</height>
+      <height>551</height>
      </rect>
     </property>
     <property name="mouseTracking">
@@ -60,7 +60,7 @@
       <x>200</x>
       <y>0</y>
       <width>771</width>
-      <height>561</height>
+      <height>551</height>
      </rect>
     </property>
     <property name="mouseTracking">
@@ -91,7 +91,7 @@
       <x>200</x>
       <y>0</y>
       <width>771</width>
-      <height>561</height>
+      <height>551</height>
      </rect>
     </property>
     <property name="mouseTracking">
@@ -112,7 +112,7 @@
        <x>0</x>
        <y>0</y>
        <width>759</width>
-       <height>549</height>
+       <height>539</height>
       </rect>
      </property>
      <property name="mouseTracking">
@@ -135,6 +135,9 @@
     <property name="tabletTracking">
      <bool>false</bool>
     </property>
+    <property name="statusTip">
+     <string>Enlarge the image</string>
+    </property>
     <property name="text">
      <string>+</string>
     </property>
@@ -151,6 +154,9 @@
     <property name="mouseTracking">
      <bool>true</bool>
     </property>
+    <property name="statusTip">
+     <string>Shrink the image</string>
+    </property>
     <property name="text">
      <string>-</string>
     </property>
@@ -159,9 +165,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>561</y>
+      <y>571</y>
       <width>972</width>
-      <height>71</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -275,17 +281,40 @@
      </property>
     </item>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>552</y>
+      <width>971</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../icons/hide.png</normaloff>../../icons/hide.png</iconset>
+    </property>
+    <property name="shortcut">
+     <string>Esc</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>972</width>
+     <width>968</width>
      <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
+    <property name="statusTip">
+     <string/>
+    </property>
     <property name="title">
      <string>Fi&amp;le</string>
     </property>
@@ -340,6 +369,9 @@
    <property name="iconText">
     <string>Load Image</string>
    </property>
+   <property name="statusTip">
+    <string>Load a new image</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+L</string>
    </property>
@@ -357,6 +389,9 @@
    </property>
    <property name="iconText">
     <string>Remove Image</string>
+   </property>
+   <property name="statusTip">
+    <string>Remove a image</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+R</string>
@@ -376,6 +411,9 @@
    <property name="iconText">
     <string>Save Image</string>
    </property>
+   <property name="statusTip">
+    <string>Save a selected image</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
@@ -394,6 +432,9 @@
    <property name="iconText">
     <string>Save Images in Group</string>
    </property>
+   <property name="statusTip">
+    <string>Save a image and his images derivation</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
    </property>
@@ -405,6 +446,9 @@
    </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="statusTip">
+    <string>Close the program</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+F4</string>
@@ -421,6 +465,9 @@
    <property name="text">
     <string>Edges</string>
    </property>
+   <property name="statusTip">
+    <string>Edge filters </string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+E</string>
    </property>
@@ -435,6 +482,9 @@
    </property>
    <property name="text">
     <string>Gaussian</string>
+   </property>
+   <property name="statusTip">
+    <string>Gaussian filters</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
@@ -451,6 +501,9 @@
    <property name="text">
     <string>Threshold</string>
    </property>
+   <property name="statusTip">
+    <string>Threshold filters</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+T</string>
    </property>
@@ -462,6 +515,9 @@
    </property>
    <property name="text">
     <string>Help</string>
+   </property>
+   <property name="statusTip">
+    <string>Show program help</string>
    </property>
    <property name="shortcut">
     <string>F1</string>
