--- a/src/UiForm/main_window.ui
+++ b/src/UiForm/main_window.ui
@@ -37,7 +37,7 @@
      </rect>
     </property>
     <property name="mouseTracking">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
@@ -290,6 +290,9 @@
       <height>15</height>
      </rect>
     </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -311,7 +314,13 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
    <widget class="QMenu" name="menuFile">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="statusTip">
      <string/>
     </property>
@@ -355,7 +364,7 @@
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="mouseTracking">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
   </widget>
   <action name="actionLoad_Image">
