--- a/src/UiForm/main_window.ui
+++ b/src/UiForm/main_window.ui
@@ -37,7 +37,7 @@
      </rect>
     </property>
     <property name="mouseTracking">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
