Fit size dialog frame

--- a/src/UiForm/edge_param.ui
+++ b/src/UiForm/edge_param.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>412</width>
-    <height>199</height>
+    <width>259</width>
+    <height>102</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,13 +17,19 @@
    <iconset>
     <normaloff>../../icons/python.ico</normaloff>../../icons/python.ico</iconset>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
+  <property name="modal">
+   <bool>false</bool>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>160</y>
-     <width>171</width>
-     <height>32</height>
+     <x>80</x>
+     <y>70</y>
+     <width>170</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="orientation">
@@ -36,10 +42,10 @@
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>20</y>
-     <width>251</width>
-     <height>25</height>
+     <x>110</x>
+     <y>10</y>
+     <width>140</width>
+     <height>20</height>
     </rect>
    </property>
    <item>
@@ -76,10 +82,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>101</width>
-     <height>21</height>
+     <x>10</x>
+     <y>10</y>
+     <width>100</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -88,24 +94,27 @@
   </widget>
   <widget class="QSpinBox" name="spinBox">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>110</y>
-     <width>61</width>
-     <height>26</height>
+     <x>180</x>
+     <y>40</y>
+     <width>70</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>110</y>
-     <width>67</width>
-     <height>31</height>
+     <x>100</x>
+     <y>40</y>
+     <width>50</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -115,10 +124,10 @@
   <widget class="QRadioButton" name="radioButton_1">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>70</y>
-     <width>81</width>
-     <height>23</height>
+     <x>10</x>
+     <y>40</y>
+     <width>70</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -134,10 +143,10 @@
   <widget class="QRadioButton" name="radioButton_2">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>70</y>
-     <width>112</width>
-     <height>23</height>
+     <x>160</x>
+     <y>40</y>
+     <width>100</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -147,10 +156,10 @@
   <widget class="QRadioButton" name="radioButton_3">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>70</y>
-     <width>81</width>
-     <height>23</height>
+     <x>80</x>
+     <y>40</y>
+     <width>80</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
