--- a/src/UiForm/gauss_param.ui
+++ b/src/UiForm/gauss_param.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
-    <height>185</height>
+    <width>172</width>
+    <height>132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,10 +20,10 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>140</y>
-     <width>171</width>
-     <height>32</height>
+     <x>10</x>
+     <y>100</y>
+     <width>150</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="orientation">
@@ -36,10 +36,10 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>100</x>
      <y>10</y>
-     <width>81</width>
-     <height>26</height>
+     <width>60</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="minimum">
@@ -49,10 +49,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>10</x>
      <y>10</y>
-     <width>41</width>
-     <height>21</height>
+     <width>40</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -62,10 +62,10 @@
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>50</y>
-     <width>191</width>
-     <height>25</height>
+     <x>60</x>
+     <y>40</y>
+     <width>100</width>
+     <height>20</height>
     </rect>
    </property>
    <item>
@@ -97,9 +97,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>50</y>
-     <width>51</width>
+     <x>10</x>
+     <y>40</y>
+     <width>40</width>
      <height>17</height>
     </rect>
    </property>
@@ -113,20 +113,23 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>90</y>
-     <width>69</width>
-     <height>26</height>
+     <x>100</x>
+     <y>70</y>
+     <width>61</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>90</y>
-     <width>67</width>
-     <height>17</height>
+     <x>10</x>
+     <y>70</y>
+     <width>40</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
