--- a/src/UiForm/edge_param.ui
+++ b/src/UiForm/edge_param.ui
@@ -104,6 +104,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>3</number>
+   </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="enabled">
