--- a/src/UiForm/main_window.ui
+++ b/src/UiForm/main_window.ui
@@ -142,32 +142,13 @@
      <string>+</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_Minus">
-    <property name="geometry">
-     <rect>
-      <x>245</x>
-      <y>15</y>
-      <width>25</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="mouseTracking">
-     <bool>true</bool>
-    </property>
-    <property name="statusTip">
-     <string>Shrink the image</string>
-    </property>
-    <property name="text">
-     <string>-</string>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>571</y>
+      <y>550</y>
       <width>972</width>
-      <height>60</height>
+      <height>80</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -281,27 +262,23 @@
      </property>
     </item>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton_Minus">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>552</y>
-      <width>971</width>
-      <height>15</height>
+      <x>250</x>
+      <y>15</y>
+      <width>25</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="mouseTracking">
-     <bool>false</bool>
+     <bool>true</bool>
+    </property>
+    <property name="statusTip">
+     <string>Shrink the image</string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../icons/hide.png</normaloff>../../icons/hide.png</iconset>
-    </property>
-    <property name="shortcut">
-     <string>Esc</string>
+     <string>-</string>
     </property>
    </widget>
   </widget>
@@ -358,8 +335,16 @@
     <addaction name="actionAbout_the_Authors"/>
     <addaction name="actionAbout_the_App"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="actionImagesTree"/>
+    <addaction name="actionTable"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuFilter"/>
+   <addaction name="menuView"/>
    <addaction name="menuOptions"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
@@ -583,6 +568,28 @@
   <action name="actionasdasd">
    <property name="text">
     <string>asdasd</string>
+   </property>
+  </action>
+  <action name="actionImagesTree">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Images Tree</string>
+   </property>
+  </action>
+  <action name="actionTable">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Table</string>
    </property>
   </action>
  </widget>
